boulder/boulder/tests/compile_fail/hir/function_call/arg_count_large.bo
# 1 parameter 
# received 3
# (6:
# (9:

fn callee(a: u32) { }

fn caller(a: u32) {
    callee(a, 12, a)
}